 * Combat Event icons can now be group controllers, filling up a group with each event captured.
 * Buff/Debuff icons can now explicity set which variable they want to look at for the "Show variable text" option.
 * All icons are now hidden when you are at the barber shop.
 * The combo point condition now only checks your target (so you can't try to check "player", which doesn't work).

====Bug Fixes====
 * Fixed range checking for multiple icon types (notably Multistate cooldowns, but also others).
 * Blood Pact should now have the correct ID in the BonusStamina equivalency.

===v7.1.2===
 * The Combat Event icon type now has special events that will fire when you multistrike.
 * Various tooltips now reflect that WoW only supports .ogg files for custom sound files - MP3s are no longer supported by the game client.
 * Removed error warning about other addons using debugprofilestart() - we got the data we needed.

====Bug Fixes====
 * The Item in Range of Unit condition should once again work properly.
 * TellMeWhen will no longer forcibly disable Blizzard's cooldown timer text when Tukui is enabled since Tukui now uses those texts as its timers.

===v7.1.1===
====Bug Fixes====
* Fixed a very silly mistake that broke anchoring of an icon's text displays when Masque was not installed.


===v7.1.0===
 * TellMeWhen has been updated for Warlords of Draenor. Please open a ticket on CurseForge for TMW if you notice anything missing.
 
 * New icon types:
 ** All-Unit Buffs/Debuffs. This icon type is mainly useful for tracking your multi-dotting on targets which might not have a unitID.
 ** Combat Event Error. This icon type reacts to messages like "Must be behind the target" or "You are already at full health".

 * New icon display method: Vertical Bars.

 * New conditions
 ** Instance Size
 ** Zone PvP Type

 * You can now set a rotation amount for a icon's text displays.
 * The "Highlight timer edge" setting is back.
 * You can now export all your global groups at once.
