@@ -1466,6 +1466,7 @@ L["PET_TYPE_FEROCITY"] = "Ferocity"
 L["SWINGTIMER"] = "Swing Timer"
 L["ITEMINBAGS"] = "Item count (includes charges)"
 L["ITEMEQUIPPED"] = "Item is equipped"
+L["ITEMSPELL"] = "Item has on use effect"
 L["ITEMCOOLDOWN"] = "Item cooldown"
 L["SPELLCOOLDOWN"] = "Spell cooldown"
 L["SPELLCHARGES_FULLYCHARGED"] = "Fully charged"
